# Socket-Programming

./: PROTOCOL.md  README.md
client/: build.gradle.kts  imgui.ini
client/gradle/wrapper/: gradle-wrapper.properties
client/src/main/kotlin/: ClientCli.kt  ClientGui.kt  CommandRegistry.kt  Main.kt  RemoteConnection.kt
server/: CMakeLists.txt
server/include/: ClientManager.h  Session.h  SmartTV.h
server/include/SmartTV/: Log.h  Session.h  SmartTV.h
server/src/: ClientManager.cpp  Log.cpp  Session.cpp  SmartTV.cpp  main.cpp
